--- a/style.css
+++ b/style.css
@@ -30,15 +30,16 @@ section{
 }
 .half-width{
     width: 50%;
-    margin-left: 10%;
+    margin-left: 5%;
     margin-top: 5%;
+    margin-right: 3%;
 
     
    
     
 }
 .half-width img{
-    width: 90%;
+    width: 80%;
     
     
     
@@ -52,8 +53,27 @@ section{
     border-radius: 7px;
     padding-bottom: 20px;
 }
+.new-color{
+    background-image: linear-gradient(purple,pink);
+    padding: 10px 40px;
+    color: white;
+    font-weight: 800;
+    border-radius: 7px;
+    padding-bottom: 20px;
+
+}
     .top-banner{
      background-image: url(images/top-banner.png);
      background-repeat: no-repeat;
     }
     
+ .ngdc{
+    display: flex;
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    padding-right: 5%;
+
+   
+ }   
+ 
