--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h4{
 .name-color{
     color: orange;
 }
-section{
+.flexable-container{
     display: flex;
     margin-bottom: 120px;
    
@@ -73,7 +73,18 @@ section{
     background-repeat: no-repeat;
     background-position: right;
     padding-right: 5%;
-
-   
- }   
+ }
+ 
+    .box-width{
+        width: 40%;
+        margin-left: 8%;
+        margin-right: 8%;
+        padding: 15px;
+        box-shadow: 15px 15px 60px;
+    }
+    .exprience-area h1{
+        margin-left: 20px;
+        margin-bottom: 5%;
+        color:rgb(152, 181, 192);
+    }
  
